<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Casa Da Lagoa</string>
    <string name="title_section1">Iluminação</string>
    <string name="title_section2">Interior</string>
    <string name="title_section3">Dispositivos</string>
    <string name="title_section4">Temperaturas</string>
    <string name="action_settings">Configuração</string>
    <string name="dummy_button">Sair</string>
    <string name="dummy_content">Conteúdo</string>
    <string name="app_menu">Configurações</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_Calendario">Observar Agenda</string>
    <string name="menu_grafico">Grafico Temperaturas</string>
    <string name="menu_external">Iluminação</string>
    <string name="menu_internal">Interior</string>
    <string name="menu_devices">Dispositivos</string>
    <string name="tab_stream">Interno</string>
    <string name="tab_messages">Externo</string>
    <string name="tab_photos">Dispositivos</string>
    <string name="tab_notifications">Notificação</string>
    <string name="menu_atualizar">Atualizar</string>
    <string name="opcao">Opção de menu</string>
    <string name="acionar_portao">Acionar\nPortão</string>
    <string name="portao">Portão</string>
    <string name="Button">New ToggleButton</string>
    <string name="acionar_alimentador">Alimentar\nCães</string>
    <string name="reiniciar_internet">Reiniciar\nInternet</string>
    <string name="reservado">Reservado</string>

    <string name="ligado">Ligado</string>
    <string name="desligado">Desligado</string>
    <string name="ligar_tudo">Ligar\nExternas</string>
    <string name="ligar_internas">Ligar\nInternas</string>
    <string name="tv_sala">TV\nSala</string>
    <string name="tv_liga">Liga\nDesliga</string>
    <string name="tv_input">Source</string>
    <string name="tv_vol_mais">Volume\n+</string>
    <string name="tv_vol_menos">Volume\n-</string>
    <string name="tv_ok">OK\n(Enter)</string>
    <string name="tv_left">Próximo</string>
    <string name="tv_ant">Anterior</string>
    <string name="tv_anterior">Anterior</string>
    <string name="tv_ca_mais">Canal\n+</string>
    <string name="tv_ca_menos">Canal\n-</string>
    <string name="sem_conexao">Aguarde\nConexão</string>
    <string name="lr_chama">Chama</string>
    <string name="lr_alta">Alta\n(2000w)</string>
    <string name="lr_media">Media\n(1000w)</string>
    <string name="lr_desc">Lareira Elétrica</string>
    <string name="lr_bt_txt">Lareira\nSala</string>
    <string name="pref_dream_text_key">pref_dream_text</string>
    <string name="pref_dream_text_default">zzzZZZzzz</string>

</resources>
